Fixed prob 5 and updated grid spacing on prb 4

--- a/04/style.css
+++ b/04/style.css
@@ -14,7 +14,7 @@ main {
                          "side art aside";
     grid-template-columns: 1fr 4fr 1fr;
     grid-template-rows: 1fr 4fr 1fr;
-    grid-gap: 1fr;
+    grid-gap: 10px;
 }
 
 
