--- a/05/style.css
+++ b/05/style.css
@@ -5,35 +5,40 @@ html {
 }
 
 article {
-    display: flexbox;
+    display: flex;
+    align-items: center;
+    justify-content: stretch;
+    flex-direction: column;
     background: rgb(14, 123, 153);
     max-width: 35rem;
     
 }
 article img {
     margin-right: 100px;
-    float: left;
+    padding: 10px;
+    float: center;
     border: 1px black;
     border-radius: 1px;
+    margin-left: 25px;
+
 }
 section.main {
     margin-right: 10px;
-    margin-left: 10px;
+    margin-left: 100px;
     text-align: left;
     
 }
 
 header {
     background: rgb(216, 96, 40);
-    flex: row;
     float: center;
     text-align: center;
 }
 
 section.source {
-    border: 1px black;
+    border: 10px black;
     border-radius: 1px;
     margin-left: 10px;
-    margin-right: 10px;
+    margin-right: 100px;
 
 }
